--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,7 @@ jobs:
           java-version: '22'
   tests:
     runs-on: ubuntu-latest
+    needs: mains
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -25,6 +26,7 @@ jobs:
         run: mvn test
   build:
     runs-on: self-hosted
+    needs: [tests,mains]
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
