--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,3 +37,18 @@ jobs:
         with:
           push: true
           tags: natsumichan/kv:latest
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Apply Kubernetes configuration
+        uses: azure/k8s-deploy@v3
+        with:
+          namespace: default
+          manifests: |
+            k8s/kv-pod.yaml
+            k8s/kv-service.yaml
+            k8s/postgres-cm1-configmap.yaml
+            k8s/postgres-data-persistentvolumeclaim.yaml
+            k8s/postgres-deployment.yaml
+            k8s/postgres-service.yaml
