--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -21,18 +21,8 @@ services:
       timeout: 5s
       start_period: 10s
       retries: 5
-  nginx:
-    image: nginx:latest
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    networks:
-      - my-network
-    depends_on:
-      - kv
   kv:
-    image: kv:latest
+    image: natsumichan/kv:latest
     build:
       context: .
       args:
