--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         run: mvn test
   build:
     runs-on: self-hosted
-    needs: [tests,mains]
+    needs: mains
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -39,16 +39,12 @@ jobs:
           tags: natsumichan/kv:latest
   deploy:
     needs: build
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-      - name: Apply Kubernetes configuration
-        uses: azure/k8s-deploy@v3
-        with:
-          namespace: default
-          manifests: |
-            ./k8s/kv-pod.yaml
-            ./k8s/kv-service.yaml
-            ./k8s/postgres-cm1-configmap.yaml
-            ./k8s/postgres-data-persistentvolumeclaim.yaml
-            ./k8s/postgres-deployment.yaml
-            ./k8s/postgres-service.yaml
+      - name: Log in to Minikube
+        run: |
+          minikube start
+
+      - name: Deploy to Kubernetes
+        run: |
+          kubectl apply -f C:\Users\nazar\OneDrive\Desktop\kvv\k8s .
