--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         run: mvn test
   build:
     runs-on: self-hosted
-    needs: mains
+    needs: tests
     steps:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
