--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,9 @@ jobs:
     needs: build
     runs-on: self-hosted
     steps:
+      - name: Kubectl Version
+        run: |
+          kubectl version
       - name: Check Minikube
         run: |
           minikube version
