--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,4 +50,4 @@ jobs:
 
       - name: Deploy to Kubernetes
         run: |
-          kubectl apply -f C:\Users\nazar\OneDrive\Desktop\kvv\k8s .
+          kubectl apply -f C:\Users\nazar\OneDrive\Desktop\kvv\k8s
